[gd_scene load_steps=45 format=2]

[ext_resource path="res://Fonts/pokemon_fire_red.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Background/gym_battle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Pokemon/Steelix.png" type="Texture" id=3]
[ext_resource path="res://Assets/Pokemon/Charizard.png" type="Texture" id=4]
[ext_resource path="res://Scripts/BattleScene.gd" type="Script" id=5]
[ext_resource path="res://Assets/NPC/red_battle_sprite.png" type="Texture" id=6]
[ext_resource path="res://Resources/battle_animation.tres" type="Animation" id=7]
[ext_resource path="res://Scenes/DialogBox.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "opponent_dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OpponentPokemon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("OpponentPokemon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 621, 48.108 ), Vector2( 1024, 48.108 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("OpponentPokemon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 48.108 ), Vector2( 621, 48.1078 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OpponentPokemon:stretch_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPokemon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPokemon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 158, 219 ), Vector2( -200, 219 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPokemon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 229.627 ), Vector2( 158, 229.627 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerPokemon:stretch_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.001 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 6 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPokemon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 219 ), Vector2( 158, 219 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OpponentPokemon:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 48.108 ), Vector2( 621, 48.108 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerPokemon:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 12.5533, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OpponentPokemon:stretch_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerPokemon:stretch_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPokemon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 229.627 ), Vector2( 158, 229.627 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerPokemon:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.615572, 7.46427 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerPokemon:stretch_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OpponentPokemon:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 48.108 ), Vector2( 621, 48.108 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OpponentPokemon:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OpponentPokemon:stretch_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.321569, 0.321569, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.321569, 0.321569, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=22]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.529412, 0.529412, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.403922, 0.941176, 0.0352941, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=29]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=30]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=31]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.403922, 0.941176, 0.0352941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=33]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.0588235, 0.305882, 0.894118, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=36]
font_data = ExtResource( 1 )

[node name="BattleScene" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 110.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPokemon" type="TextureRect" parent="."]
margin_left = 158.0
margin_top = 219.0
margin_right = 222.0
margin_bottom = 283.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentPokemon" type="TextureRect" parent="."]
margin_left = 1024.0
margin_top = 48.108
margin_right = 1088.0
margin_bottom = 112.108
rect_min_size = Vector2( 3, 3 )
rect_scale = Vector2( 3, 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" parent="." instance=ExtResource( 9 )]
margin_top = 411.0
margin_bottom = 600.0
dialog = [  ]

[node name="Tween" type="Tween" parent="."]

[node name="BattleAnimation" type="AnimationPlayer" parent="."]
anims/opponent_damage_taken = ExtResource( 7 )
anims/opponent_dead = SubResource( 2 )
anims/opponent_switch = SubResource( 3 )
anims/opponent_switch_pokemon = SubResource( 4 )
anims/player_damage_taken = SubResource( 5 )
anims/player_switch = SubResource( 6 )
anims/player_switch_pokemon = SubResource( 7 )
anims/start_fight = SubResource( 8 )
anims/start_fight_pokemon = SubResource( 9 )

[node name="Moves" type="Panel" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -190.0
margin_bottom = 6.10352e-05
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move1" type="Button" parent="Moves"]
margin_left = 192.0
margin_top = 14.0
margin_right = 452.0
margin_bottom = 79.0
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "Attaque 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move2" type="Button" parent="Moves"]
margin_left = 568.0
margin_top = 14.0
margin_right = 828.0
margin_bottom = 79.0
custom_styles/hover = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
text = "Attaque 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move3" type="Button" parent="Moves"]
margin_left = 192.0
margin_top = 106.0
margin_right = 452.0
margin_bottom = 171.0
custom_styles/hover = SubResource( 17 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "Attaque 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move4" type="Button" parent="Moves"]
margin_left = 568.0
margin_top = 106.0
margin_right = 828.0
margin_bottom = 171.0
custom_styles/hover = SubResource( 18 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
text = "Attaque 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="Panel" parent="."]
visible = false
margin_top = 410.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fight" type="Button" parent="Action"]
margin_left = 192.0
margin_top = 14.0
margin_right = 452.0
margin_bottom = 78.0
custom_styles/hover = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 22 )
text = "Fight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon" type="Button" parent="Action"]
margin_left = 568.0
margin_top = 14.0
margin_right = 828.0
margin_bottom = 78.0
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 22 )
text = "Pokemon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bag" type="Button" parent="Action"]
margin_left = 192.0
margin_top = 106.0
margin_right = 452.0
margin_bottom = 170.0
custom_styles/hover = SubResource( 24 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 22 )
text = "Bag"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="Button" parent="Action"]
margin_left = 568.0
margin_top = 106.0
margin_right = 828.0
margin_bottom = 170.0
custom_styles/hover = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 22 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentFrame" type="Panel" parent="."]
visible = false
margin_left = 56.0
margin_top = 32.0
margin_right = 360.0
margin_bottom = 112.0
custom_styles/panel = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpBar" type="ProgressBar" parent="OpponentFrame"]
margin_left = 2.0
margin_top = 32.0
margin_right = 300.0
margin_bottom = 56.0
custom_styles/fg = SubResource( 27 )
custom_styles/bg = SubResource( 28 )
custom_fonts/font = SubResource( 29 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="OpponentFrame"]
margin_left = 8.0
margin_right = 72.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 30 )
text = "Steelix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl" type="Label" parent="OpponentFrame"]
margin_left = 245.033
margin_right = 299.033
margin_bottom = 32.0
custom_fonts/font = SubResource( 31 )
text = "Lvl 60"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerFrame" type="Panel" parent="."]
visible = false
margin_left = 672.0
margin_top = 294.418
margin_right = 976.0
margin_bottom = 395.418
custom_styles/panel = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpBar" type="ProgressBar" parent="PlayerFrame"]
margin_left = 3.0
margin_top = 32.0
margin_right = 300.0
margin_bottom = 56.0
custom_styles/fg = SubResource( 32 )
custom_styles/bg = SubResource( 28 )
custom_fonts/font = SubResource( 33 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpBar" type="ProgressBar" parent="PlayerFrame"]
margin_left = 3.0
margin_top = 64.0
margin_right = 300.0
margin_bottom = 88.0
custom_styles/fg = SubResource( 34 )
custom_styles/bg = SubResource( 35 )
custom_fonts/font = SubResource( 36 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PlayerFrame"]
margin_left = 8.0
margin_right = 72.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 30 )
text = "Charizard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl" type="Label" parent="PlayerFrame"]
margin_left = 243.6
margin_right = 297.6
margin_bottom = 32.0
custom_fonts/font = SubResource( 31 )
text = "Lvl 55"
align = 1
valign = 1
[connection signal="state_changed" from="." to="." method="on_BattleScene_state_changed"]
[connection signal="mouse_entered" from="Moves/Move1" to="." method="_on_Move1_mouse_entered"]
[connection signal="pressed" from="Moves/Move1" to="." method="_on_Move1_pressed"]
[connection signal="pressed" from="Moves/Move2" to="." method="_on_Move2_pressed"]
[connection signal="pressed" from="Moves/Move3" to="." method="_on_Move3_pressed"]
[connection signal="pressed" from="Moves/Move4" to="." method="_on_Move4_pressed"]
[connection signal="pressed" from="Action/Fight" to="." method="_on_Fight_pressed"]
